crates/oxc_css_parser/tests/error/scss/at-rule/forward/with-empty.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `$var`, but found `)`
  ┌─ with-empty.scss:1:24
  │
1 │ @forward "other" with ();
  │                        ^


